# lib_curl

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: requirements.txt
.github/workflows/: codeql.yml
CMake/: ExternalProject.cmake  FindAnyProject.cmake  FindExtOpenSSL.cmake  FindExtProject.cmake  FindExtZLIB.cmake  FindGSS.cmake  Macros.cmake  OtherTests.cmake  PackageConfig.cmake.in  Utilities.cmake  android.toolchain.cmake  find_anyproject.cmake  find_extproject.cmake  util.cmake
lib/: CMakeLists.txt
opt/: folders.csv
src/: CMakeLists.txt
tests/: curl_client_key  curl_client_key.pub  curl_client_knownhosts  curl_host_rsa_key  curl_host_rsa_key.pub  curl_sftp_config  curl_ssh_config  curl_sshd_config  plainfile.txt  rofile.txt
tests/data/: DISABLED  test1296  test1910  test346
tests/log/: test2078
tests/server/: CMakeLists.txt
